# tala-center

./: pyproject.toml
app/: main.py  ui.py
app/core/: config.py
app/schemas/: transaction.py
app/services/: bank_parser_service.py  database_service.py  gold_center_service.py  gold_price_service.py
app/templates/: database.xlsx  export.xlsx  قالب خروجی.xlsx  مرکز اصلی طلا.xlsx
app/ui/: main_window.py
app/utils/: shamsi.py  text.py
